qttools-opensource-src (5.6.0~beta-2) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * Add empty override_dh_auto_test-indep target (to prevent the whole qttools
    source from being compiled during indep builds).

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 07 Jan 2016 13:46:45 +0300

qttools-opensource-src (5.6.0~beta-1) experimental; urgency=medium

  * New upstream beta release.
  * Install upstream manpages for lrelease and lupdate.
  * Update debian/watch to track experimental releases (needs to be reverted
    before uploading 5.6.0 final).
  * Disable qtwebkit help viewer temporarily (until we get qtwebkit 5.6
    tarballs).
  * Bump other Qt build-dependencies to 5.6.0~beta.
  * Disable building qch documentation for base Qt modules in this source, as
    those modules can no longer provide the HTML documentation on their own.
  * Build qdoc before building docs.
  * Install qdoc documentation.
  * Update install files.
  * Add necessary Breaks/Replaces for qdoc move.
  * Update symbols files using migrate-symbols.py script.
  * Add some new symbols.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 07 Jan 2016 09:35:24 +0300

qttools-opensource-src (5.5.1-3) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * Make arch-indep builds possible, by building qhelpgenerator before
    attempting to build docs.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 21 Oct 2015 16:38:52 -0300

qttools-opensource-src (5.5.1-2) experimental; urgency=medium

  * Re upload as source+all. We need to fix building all packages
    alone.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 17 Oct 2015 16:43:25 -0300

qttools-opensource-src (5.5.1-1) experimental; urgency=medium

  [ Felix Geyer ]
  * Move Qt5LinguistTools cmake files from -dev to -dev-tools package.
    (Closes: #793347)

  [ Lisandro Damián Nicanor Pérez Meyer ]