@@ -3,6 +3,7 @@ qttools-opensource-src (5.6.0~beta-2) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * Add empty override_dh_auto_test-indep target (to prevent the whole qttools
     source from being compiled during indep builds).
+  * Use dh_auto_build instead of plain make to parallelize the build.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 07 Jan 2016 13:46:45 +0300
 
